-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
None
-
Fully Compatible
-
ALL
-
Service arch 2020-12-14
-
None
-
None
-
None
-
None
-
None
-
None
-
None
s2 base/port.h defines MSG_NOSIGNAL on macos, assuming MacOS doesn't have its own definition of it. Well, these days MacOS does, so this should be removed from s2.
s2 doesn't even use this definition, it's just pasted from a very old Google base/port.h header.