SERVER-53260 s2geometry: remove unused definition MSG_NOSIGNAL to fix macosx build