src/third_party/s2/base/port.h
@@ -290,9 +290,6 @@ inline size_t strnlen(const char *s, size_t maxlen) {
 
 using namespace std;  // just like VC++, we need a using here
 
-// Doesn't exist on OSX; used in google.cc for send() to mean "no flags".
-#define MSG_NOSIGNAL 0
-
 // No SIGPWR on MacOSX.  SIGINFO seems suitably obscure.
 #undef GOOGLE_OBSCURE_SIGNAL
 #define GOOGLE_OBSCURE_SIGNAL  SIGINFO
